--- a/fsn.css
+++ b/fsn.css
@@ -1,3 +1,22 @@
 body{
 	margin: 0;
+	font-family: Helvetica, Arial, sans-serif
 }
+
+header{
+	background-color: #00CC33;
+     text-align: center;
+     padding-top: 50px;
+     padding-bottom: 50px
+
+}
+
+header h1{
+	color: black;
+
+}
+
+header img{
+	border-radius: 150px;
+	border: 20px solid #BDC3C7
+} 
